# SCU-URP-Helper

./: .gitignore  LICENSE  README.md  config.json.example  main.py  pyproject.toml
.github/workflows/: verify.yml
modules/: AutoCourseGrabbing.py  ocr.py  ui_theme.py  userLogin.py  utils.py
ui/: add.ui  login.ui  menu.ui  selected.ui  start.ui
win/: AddWin.py  LoginWin.py  MenuWin.py  SelectedWin.py  StartWin.py
