[project]
name = "scu-urp-helper"
version = "1.1.0"
description = "SCU URP Helper GUI with updated course-selection APIs"
readme = "README.md"
requires-python = ">=3.8,<3.10"
dependencies = [
    "PySide2>=5.13.2,<5.16",
    "requests>=2.31.0",
    "ddddocr>=1.4.11",
    "onnxruntime>=1.15.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0,<2",
]

[tool.uv]
package = false
